task-43/templates/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client-43
  namespace: task43-ns
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
