task-43/templates/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-43
  namespace: task43-ns
  labels:
    app: web
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
